improve db connector and add backup import